buttons, navigation, homepage layout, project layout, responsive styles, parallax effect,

--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -3,10 +3,12 @@ layout: project
 quote: We all got LOGO TATTOOS!
 client: Bittercube Bitters
 status: active
-summary: 'Bittercube needed to elevate their brand to match the quality and sophistication of their products,
+summary: '<p>Bittercube needed to elevate their brand to match the quality and sophistication of their products,
 philosophy, and team. And once they saw the new logo, every one of ‘em had a new tattoo!'
+description_html: 'Bittercube Bitters slow crafts bitters using all natural ingredients, and no extracts of any
+kind. Hailing from Milwaukee and Minneapolis, Bittercube has been in the craft cocktail industry since 2009. Bittercube needed to elevate their brand to match the quality and sophistication of their products, philosophy, and team. And once they saw the new logo, every one of ‘em had a new tattoo!</p>' 
 completion_date:
-hero_image: /assets/img/projects/bittercube-project/bittercube-work-banner.jpg
+hero_image:
 featured_image: /assets/img/projects/bittercube-project/bittercube-feature.jpg
 tags:
 - branding
@@ -14,92 +16,68 @@ tags:
 - illustration
 ---
 
-<section class="pt-0">
-  <div class="container">
-    <div class="row slide-up-1">
-      <div class="col-12">
-        <div class="content editable">
-          <p class="lead">Bittercube Bitters slow crafts bitters using all natural ingredients, and no extracts of any
-            kind. Hailing from Milwaukee and Minneapolis, Bittercube has been in the craft cocktail industry since
-            2009.</p>
-          <p>Bittercube needed to elevate their brand to match the quality and sophistication of their products,
-            philosophy, and
-            team. And once they saw the new logo, every one of ‘em had a new tattoo!</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<div class="parallax-window">
-  <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-parallax.jpg);"></div>
-</div>
-<!-- <div class="parallax-window" data-parallax="scroll" data-image-src="/assets/img/projects/bittercube-project/bittercube-work-parallax.jpg" data-speed="0.8"></div> -->
 <section>
   <div class="container">
-    <div class="row align-items-center slide-up-1">
-      <div class="col-12 col-lg-10 mx-lg-auto">
+    <div class="row">
+      <div class="col-lg-4">
         <div class="content">
-          <p class="text-large mb-0">Early in the research and brand strategy phase of this project, we decided that it would be ideal to maintain the individual elements of the original ID if at all possible. The dropper and cube of bitters nearly
-            phonetically spelled out the brand name and always kept the hand-cra ed feel front and center. With Bittercube’s passion
-            for true craftsmanship and commitment to producing their bitters by hand, with care, we saw an opportunity to apply
-            the same ideas to their rebrand.</p>
+          <h2>An Identity title here...</h2>
+        </div>
+      </div>
+      <div class="col-lg-8">
+        <div class="content">
+          <p class="mb-0">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia, dolores ab animi atque vitae voluptatum expedita, iusto iste maxime nam sit totam quibusdam sunt corporis aperiam consequuntur deleniti officiis blanditiis.</p>
         </div>
       </div>
     </div>
   </div>
 </section>
-<section class="pt-0">
+<div class="bg-image aspect-hero" style="background-image: url({{ site.placeholders.hero }})"></div>
+<div class="row no-gutters">
+  <div class="col-lg-6">
+    <div class="bg-image aspect-16x9" style="background-image: url({{ site.placeholders.hero}})"></div>
+  </div>
+  <div class="col-lg-6">
+    <div class="bg-image aspect-16x9" style="background-image: url({{ site.placeholders.hero}})"></div>
+  </div>
+</div>
+<section>
   <div class="container">
     <div class="row">
-      <div class="col-12">
-        <div class="content slide-up-1">
-          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-01.jpg)"></div>
-        </div>
-        <div class="content slide-up-1">
-          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-02.jpg)"></div>
-        </div>
-      </div>
-    </div>
-    <div class="row align-items-center slide-up-1">
-      <div class="col-md-6">
-        <div class="content pr-md-1">
-          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-03.jpg)"></div>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="content pl-md-1">
-          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-04.jpg)"></div>
-        </div>
-      </div>
-    </div>
-    <div class="row slide-up-1">
-      <div class="col-12">
+      <div class="col-lg-4">
         <div class="content">
-          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/bittercube-project/bittercube-work-05.jpg)"></div>
+          <h2>Family of bitters / Illustrations</h2>
+        </div>
+      </div>
+      <div class="col-lg-8">
+        <div class="content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur distinctio aliquam delectus vel esse veniam asperiores rerum eveniet, vitae minima illum eos maxime non ratione rem error provident assumenda sapiente.
         </div>
       </div>
     </div>
+  </div>
+</section>
+<div class="row no-gutters">
+  <div class="col-lg-6">
+    <div class="bg-image aspect-1x1" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+  </div>
+  <div class="col-lg-6">
+    <div class="bg-image aspect-1x1" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+  </div>
+</div>
+<div class="bg-image aspect-hero" style="background-image: url({{ site.placeholders.hero }})"></div>
+<section class="website-showcase bg-dark text-white">
+  <div class="container">
     <div class="row">
-      <div class="col-12">
+      <div class="col-lg-4">
+        <div class="content position-sticky sticky-top">
+          <h3>Bittercube website</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi repudiandae consequuntur rem. Provident doloribus modi in a vero. Fugit itaque laborum quam labore vel ducimus facilis dicta quia perferendis veritatis.</p>
+        </div>
+      </div>
+      <div class="col-lg-8">
         <div class="content">
-          <div id="carousel-web-showcase" class="carousel slide" data-ride="carousel" data-interval="false">
-            <!-- <ol class="carousel-indicators">
-                  <li data-target="#carousel-web-showcase" data-slide-to="0" class="active"></li>
-                </ol> -->
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="/assets/img/projects/bittercube-project/bittercube-web-home.jpg" alt="Bittercube Web Image">
-              </div>
-            </div>
-          </div>
-          <!-- <a class="carousel-control-prev" href="#carousel-web-showcase" role="button" data-slide="prev">
-                <i class="arrow arrow-left"></i>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carousel-web-showcase" role="button" data-slide="next">
-                <i class="arrow arrow-right"></i>
-                <span class="sr-only">Next</span>
-              </a> -->
+          <img src="/assets/img/projects/bittercube-project/bittercube-web-home.jpg" class="img-fluid" alt="Bittercube website image">
         </div>
       </div>
     </div>
