--- a/src/index.html
+++ b/src/index.html
@@ -78,11 +78,63 @@ mosaic:
             the most influential logos, icons, campaigns and user interfaces on
             the web and beyond.
           </p>
-          <a href="/contact" class="btn btn-outline-light">Let's Talk</a>
+          <a href="/contact" class="btn btn-border btn-border-white">Let's Talk</a>
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row align-items-center justify-content-between">
+      <div class="col-6 col-lg-2">
+        <div class="content">
+          <img src="/assets/img/home/logopile-google.png" alt="Google Logo" class="img-fluid" />
+        </div>
+      </div>
+      <div class="col-6 col-lg-2">
+        <div class="content">
+          <img src="/assets/img/home/logopile-w3c.png" alt="W3C Logo" class="img-fluid" />
+        </div>
+      </div>
+      <div class="col-6 col-lg-2">
+        <div class="content">
+          <img src="/assets/img/home/logopile-harvardbusinessreview.png" alt="Harvard Business Review Logo" class="img-fluid" />
+        </div>
+      </div>
+      <div class="col-6 col-lg-3">
+        <div class="content">
+          <img src="/assets/img/home/logopile-sxsw.png" alt="South by SouthWest Logo" class="img-fluid" />
+        </div>
+      </div>
+      <div class="col-6 col-lg-2">
+        <div class="content">
+          <img src="/assets/img/home/logopile-facebook.png" alt="Facebook Logo" class="img-fluid" />
+        </div>
+      </div>
+      <div class="col-6 col-lg-2">
+        <div class="content">
+          <img src="/assets/img/home/logopile-frontline.png" alt="Frontline Logo" class="img-fluid" />
+        </div>
+      </div>
+      <div class="col-6 col-lg-2">
+        <div class="content">
+          <img src="/assets/img/home/logopile-pbs.png" alt="PBS Logo" class="img-fluid" />
+        </div>
+      </div>
+      <div class="col-6 col-lg-2">
+        <div class="content">
+          <img src="/assets/img/home/logopile-burton.png" alt="Burton Logo" class="img-fluid" />
+        </div>
+      </div>
+      <div class="col-6 col-lg-3">
+        <div class="content">
+          <img src="/assets/img/home/logopile-mozilla.png" alt="Mozilla Logo" class="img-fluid" />
+        </div>
+      </div>
+      <div class="col-6 col-lg-3">
+        <div class="content">
+          <img src="/assets/img/home/logopile-internetsociety.png" alt="Internet Society Logo" class="img-fluid" />
+        </div>
+      </div>
+    </div>
+    <!-- <div class="row">  
       <div class="col-12">
         <div class="content">
           <div class="logo-pile">
@@ -102,8 +154,6 @@ mosaic:
             <div class="logo-item">
               <img src="/assets/img/home/logopile-facebook.png" alt="Facebook Logo" class="img-fluid" />
             </div>
-          </div>
-          <div class="logo-pile">
             <div class="logo-item">
               <img src="/assets/img/home/logopile-frontline.png" alt="Frontline Logo" class="img-fluid" />
             </div>
@@ -122,7 +172,7 @@ mosaic:
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </section>
 
@@ -186,7 +236,7 @@ mosaic:
             World’s Greatest DesignsquadTM, so drop a joke in the joke station
             and let’s see if you’ve got what it takes!
           </p>
-          <a href="/about" class="btn btn-outline-dark">About Us</a>
+          <a href="/about" class="btn btn-border">About Us</a>
         </div>
       </div>
     </div>
