project grid hover behavior and styles, burton project layout updates, first project layout updates, responsive styles

--- a/src/_projects/burton-learn-to-ride.html
+++ b/src/_projects/burton-learn-to-ride.html
@@ -3,11 +3,11 @@ layout: project
 quote: Learn to ride? More like learn to rip.
 client: Burton Snowboards
 status: active
-summary: 'Experience Snowboarding’ was a confusing galaxy of products and initiatives. With a ethereal aesthetic and an
-even more mysterious structure, the whole thing needed to get more down to earth.'
+summary:
+description_html: '<p>Standing sideways since 1977, Burton IS snowboarding in many ways. Learn to Ride — formerly Experience Snowboarding — is a program initiated by Burton in partnership with various resorts all over the world to provide comprehensive learning experiences for riders of every age and ability. From toddlers to first-timers, retirees to park rats, Learn to Ride is a fun, empowering, and exciting program that allow riders, shops and resorts to take their snowboard experience to the next level.'
 completion_date: 2013-08-01 00:00:00
 featured_image: /assets/img/projects/burtonltr-project/burtonltr-feature.jpg
-hero_image: /assets/img/projects/burtonltr-project/burtonltr-feature.jpg
+hero_image: /assets/img/projects/burtonltr-project/burtonltr-hero.jpg
 gallery:
 - image:
 caption:
@@ -17,56 +17,17 @@ tags:
 - web
 ---
 
-<section class="pt-0">
-  <div class="container">
-    <div class="row">
-      <div class="col-12 fade-in">
-        <div class="content">
-          <p class="lead">
-            ‘Experience Snowboarding’ was a confusing galaxy of products and initiatives. With a ethereal aesthetic and
-            an even more mysterious structure, the whole thing needed to get more down to earth.
-          </p>
-          <p>Standing sideways since 1977, Burton IS snowboarding in many ways. Learn to Ride — formerly Experience
-            Snowboarding — is a program initiated by Burton in partnership with various resorts all over the world to
-            provide comprehensive learning experiences for riders of every age and ability. From toddlers to
-            first-timers, retirees to park rats, Learn to Ride is a fun, empowering, and exciting program that allow
-            riders, shops and resorts to take their snowboard experience to the next level.</p>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-4 fade-in">
-        <div class="content">
-          <h4>Products</h4>
-          <p>Everything from learning-focused boards, boots, and bindings to helmets, kids gear, and industry-changing
-            step-on bindings.</p>
-        </div>
-      </div>
-      <div class="col-md-4 fade-in">
-        <div class="content">
-          <h4>Programs</h4>
-          <p>Rider-designed instructor courses, teen camps, women’s camps, the industry’s best product demos and resort
-            rental offerings.</p>
-        </div>
-      </div>
-      <div class="col-md-4 fade-in">
-        <div class="content">
-          <h4>Places</h4>
-          <p>Toddler-sized Riglet parts, Burton Learn To Ride beginner to advanced terrain parks, branded natural
-            terrain, and beyond.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<div class="mirror-container"></div>
-<div class="parallax-window">
-  <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-hero.jpg);"></div>
-</div>
+
+
 <section>
   <div class="container">
-    <div class="row slide-up-1">
-      <div class="col-12 col-lg-10 mx-lg-auto">
+    <div class="row">
+      <div class="col-lg-4">
+        <div class="content">
+          <h2>An Identity title here</h2>
+        </div>
+      </div>
+      <div class="col-lg-8">
         <div class="content">
           <p class="text-large mb-0">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam dicta quod consequatur
             tempore hic, obcaecati totam repellendus laudantium eius soluta quidem exercitationem quibusdam? Quis
@@ -76,7 +37,18 @@ tags:
     </div>
   </div>
 </section>
-<section class="pt-0">
+<div class="bg-image aspect-16x9"
+  style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-06.jpg)"></div>
+<div class="row no-gutters">
+  <div class="col-md-6">
+    <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-03.jpg)"></div>
+  </div>
+  <div class="col-md-6">
+    <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-05.jpg)"></div>
+  </div>
+</div>
+
+<!-- <section class="pt-0">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -87,21 +59,10 @@ tags:
           <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-04.jpg)"></div>
         </div>
         <div class="content slide-up-1">
-          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-06.jpg)"></div>
+          
         </div>
       </div>
     </div>
-    <div class="row slide-up-1">
-      <div class="col-md-6">
-        <div class="content pr-md-1">
-          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-03.jpg)"></div>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="content pl-md-1">
-          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-05.jpg)"></div>
-        </div>
-      </div>
-    </div>
+    
   </div>
-</section>
+</section> -->
