--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@ mosaic:
   </div>
 </section>
 
-<section id="photo-grid" class="py-0">
+<section class="py-0 project-grid">
  {% include photo-grid.html %}
 </section>
 <div id="project-nav">
@@ -48,7 +48,7 @@ mosaic:
     <a href="#" class="project-nav-item">
       <img src="{{ site.placeholders.aspect-1x1}}" class="img-fluid" alt="">
       <div class="hover-overlay">
-        <p>Project name</p>
+        <p class="hover-primary-text">Project name</p>
       </div>
     </a>
   {% endfor %}
