--- a/src/_projects/first-launch.html
+++ b/src/_projects/first-launch.html
@@ -5,9 +5,10 @@ client: FIRST LAUNCH
 status: active
 summary: 'For 2019 Ocupop proposed developing a cohesive theme that would work across all four competitions—something
 that hadn’t been done in previous years.'
+description_html: '<p>FIRST is on a mission to get children ages 6-18 involved in STEM and STEM related elds. Every year FIRST holds a tournament comprising of four different competitions. Each competition presents a new challenge that requires teamwork, communication and STEM principles. Oh, and robots, too.</p><p>For 2019 Ocupop proposed developing a cohesive theme that would work across all four competitions—something that hadn’t been done in previous years.</p>'
 completion_date: 2019-01-01 00:00:00
-featured_image: '/assets/img/projects/first-launch-project/first-feature.jpg'
-hero_image: '/assets/img/projects/first-launch-project/first-work-banner.jpg'
+featured_image: '/assets/img/projects/first-launch-project/first-launch-featured.jpg'
+hero_image: '/assets/img/projects/first-launch-project/first-work-parallax.jpg'
 gallery:
 - image:
 caption:
@@ -19,133 +20,96 @@ tags:
 - web
 ---
 
-<section class="pt-0 bg-white">
+<section>
   <div class="container">
-    <div class="row slide-up-1">
-      <div class="col-12">
+    <div class="row">
+      <div class="col-lg-4">
         <div class="content">
-          <p class="lead">FIRST is on a mission to get children ages 6-18 involved in STEM and STEM related elds. Every
-            year FIRST holds a tournament comprising of four different competitions. Each competition presents a new
-            challenge that requires teamwork, communication and STEM principles. Oh, and robots, too.</p>
-          <p>For 2019 Ocupop proposed developing a cohesive theme that would work across all four
-            competitions—something that
-            hadn’t been done in previous years.</p>
+          <h2>An Identity Title here</h2>
+        </div>
+      </div>
+      <div class="col-lg-8">
+        <div class="content">
+          <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure amet, optio iste animi adipisci omnis obcaecati sed quaerat, quos officia, provident dolor veniam temporibus ratione nesciunt sunt rerum voluptates corrupti.</p>
         </div>
       </div>
     </div>
   </div>
 </section>
-<div class="parallax-window">
-  <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/first-launch-project/first-work-parallax.jpg);"></div>
+<div class="row no-gutters">
+  <div class="col-lg-6">
+    <div class="bg-image aspect-16x9" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+  </div>
+  <div class="col-lg-6">
+    <div class="bg-image aspect-16x9" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+  </div>
 </div>
 <section>
   <div class="container">
-    <div class="row slide-up-1">
-      <div class="col-12 col-lg-10 mx-lg-auto">
-        <div class="content slide-up-1">
-          <p class="text-large mb-0">All four competitions would need identities that were distinctly different from one another
-            but be tied to the overarching theme. Teaser animations, illustrations and digital marketing assets were developed to
-            spark interest alongside a website introducing the theme and challenges. Apparel and promotional materials
-            were also designed for participants to show their FIRST ‘Stem Squad’ pride.</p>
+    <div class="row">
+      <div class="col-lg-4">
+        <div class="content">
+          <h2>More Logos!</h2>
+        </div>
+      </div>
+      <div class="col-lg-8">
+        <div class="content">
+          <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure amet, optio iste animi adipisci
+            omnis obcaecati sed quaerat, quos officia, provident dolor veniam temporibus ratione nesciunt sunt rerum
+            voluptates corrupti.</p>
         </div>
       </div>
     </div>
   </div>
 </section>
-<section class="pt-0">
+<div class="row no-gutters">
+  <div class="col-lg-6">
+    <div class="bg-image aspect-1x1" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+  </div>
+  <div class="col-lg-6">
+    <div class="bg-image aspect-1x1" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+  </div>
+</div>
+<section class="bg-dark text-white">
   <div class="container">
+    <div class="row">
+      <div class="col-lg-4">
+        <div class="content">
+          <h2>Program Teaser</h2>
+        </div>
+      </div>
+      <div class="col-lg-8">
+        <div class="content">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque fuga laboriosam ullam ipsum! Pariatur, architecto! Quisquam repudiandae architecto optio fugiat vitae rerum vero perspiciatis obcaecati. Laboriosam dicta ad asperiores vel.
+        </div>
+      </div>
+    </div>
     <div class="row">
       <div class="col-12">
         <div class="content">
           <iframe src="https://player.vimeo.com/video/307118616" width="100%" height="600" frameborder="0"
             webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
-        <div class="content slide-up-1">
-          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/first-launch-project/first-work-01.jpg)"></div>
-        </div>
-        <div class="content slide-up-1">
-          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-10.jpg)"></div>
-        </div>
       </div>
     </div>
-    <div class="row slide-up-1">
-      <div class="col-md-6">
-        <div class="content pr-md-1">
-          <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/projects/first-launch-project/first-launch-project-09.jpg)"></div>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="content pl-md-1">
-          <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/projects/first-launch-project/first-launch-project-08.jpg)"></div>
-        </div>
-      </div>
-    </div>
+  </div>
+</section>
+<div class="bg-image aspect-hero" style="background-image: url({{ site.placeholders.hero }})"></div>
+<section class="website-showcase bg-dark text-white">
+  <div class="container">
     <div class="row">
-      <div class="col-12">
-        <div class="content slide-up-1">
-          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/first-launch-project/first-work-02.jpg)"></div>
-        </div>
-        <div class="content slide-up-1">
-          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-04.jpg)"></div>
-        </div>
-      </div>
-    </div>
-    <div class="row slide-up-1">
-      <div class="col-md-6">
-        <div class="content pr-md-1">
-          <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/projects/first-launch-project/first-launch-project-05.jpg)"></div>
+      <div class="col-lg-4">
+        <div class="content position-sticky sticky-top">
+          <h3>Website copy</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi repudiandae consequuntur rem. Provident
+            doloribus modi in a vero. Fugit itaque laborum quam labore vel ducimus facilis dicta quia perferendis
+            veritatis.</p>
         </div>
       </div>
-      <div class="col-md-6">
-        <div class="content pl-md-1">
-          <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/projects/first-launch-project/first-launch-project-03.jpg)"></div>
-        </div>
-      </div>
-    </div>
-    <div class="row slide-up-1">
-      <div class="col-12">
+      <div class="col-lg-8">
         <div class="content">
-          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/first-launch-project/first-launch-project-06-video.jpg)"></div>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-12">
-        <div class="content">
-          <div id="carousel-web-showcase" class="carousel slide" data-ride="carousel" data-interval="false">
-            <ol class="carousel-indicators">
-              <li data-target="#carousel-web-showcase" data-slide-to="0" class="active"></li>
-              <li data-target="#carousel-web-showcase" data-slide-to="1"></li>
-              <li data-target="#carousel-web-showcase" data-slide-to="2"></li>
-              <li data-target="#carousel-web-showcase" data-slide-to="3"></li>
-              <li data-target="#carousel-web-showcase" data-slide-to="4"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="/assets/img/projects/first-launch-project/FIRST-work-web-01.jpg" alt="First Web Image">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="/assets/img/projects/first-launch-project/FIRST-work-web-02.jpg" alt="First Web Image">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="/assets/img/projects/first-launch-project/FIRST-work-web-03.jpg" alt="First Web Image">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="/assets/img/projects/first-launch-project/FIRST-work-web-04.jpg" alt="First Web Image">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="/assets/img/projects/first-launch-project/FIRST-work-web-05.jpg" alt="First Web Image">
-              </div>
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carousel-web-showcase" role="button" data-slide="prev">
-            <i class="arrow arrow-left"></i>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carousel-web-showcase" role="button" data-slide="next">
-            <i class="arrow arrow-right"></i>
-            <span class="sr-only">Next</span>
-          </a>
+          <img src="/assets/img/projects/first-launch-project/FIRST-work-web-01.jpg" class="img-fluid"
+            alt="First Launch website image">
         </div>
       </div>
     </div>
