--- a/src/focus.html
+++ b/src/focus.html
@@ -27,30 +27,28 @@ testimonial: true
   </div>
 </section>
 <section>
-  <div class="container">
-    <div class="row slide-up-1">
-      {% for focus in site.focuses %} {% assign project = site.projects | where:
-      "slug", focus.project | first %}
-      <div class="col-12 col-md-6 col-lg-4">
-        <div class="content text-center">
-          <div class="focus-card">
-            <img src="{{ site.placeholders.aspect-1x1 }}" class="img-fluid " alt="">
-            <h3>{{ focus.title }}</h3>
-            <p>{{ focus.label }}</p>
-          </div>
-          <!-- <a
-            class="btn btn-inline text-primary"
-            href="{{ focus.url }}"
-            title="{{ focus.title }}"
-            data-transition="FocusTransition">Learn more...</a> -->
+  <div class="row no-gutters">
+    {% for focus in site.focuses %} {% assign project = site.projects | where:
+    "slug", focus.project | first %}
+    <div class="col-12 col-lg-6">
+      <div class="content">
+        <div class="focus-card">
+          <!-- <img src="{{ site.placeholders.aspect-1x1 }}" class="img-fluid " alt=""> -->
+          <h3>{{ focus.title }}</h3>
+          <p>{{ focus.label }}</p>
         </div>
+        <!-- <a
+          class="btn btn-inline text-primary"
+          href="{{ focus.url }}"
+          title="{{ focus.title }}"
+          data-transition="FocusTransition">Learn more...</a> -->
       </div>
-      {% endfor %}
     </div>
+    {% endfor %}
   </div>
 </section>
-<section class="text-center">
+<!-- <section class="text-center">
   <a id="to-top" href="#page-intro">
     <i class="icon icon-rocket"></i>
     Back to Top</a>
-</section>
+</section> -->
