--- a/src/contact.html
+++ b/src/contact.html
@@ -3,10 +3,10 @@ layout: default
 title: Contact
 testimonial: true
 ---
-<section id="page-intro" class="fade-in">
+<section id="page-intro">
   <div class="container">
     <div class="row">
-      <div class="col-12">
+      <div class="col-lg-10 mx-auto">
         <div class="content editable">
           <h1>What we're like to work with</h1>
           <p>We are, simply speaking, a small shop, with all of the benefits and pit-falls therein. You see what you get; no
@@ -16,7 +16,7 @@ testimonial: true
       </div>
       <div class="col-12 col-lg-10 mx-lg-auto">
         <div class="content">
-          <div class="cognito">
+          <div id="contact-page-form" class="cognito">
             <script src="https://services.cognitoforms.com/s/bbN8iw1MJUqjPe6aHn-_rw"></script>
             <script>Cognito.load("forms", { id: "25" });</script>
           </div>
@@ -26,7 +26,7 @@ testimonial: true
   </div>
 </section>
 
-<section id="joke-station" class="py-0">
+<!-- <section id="joke-station" class="py-0">
   <div class="row no-gutters">
     <div class="col-lg-6 bg-primary d-flex justify-content-end align-items-center p-5">
       <div class="bg-image aspect-1x1" style="background-image:url(/assets/img/meme.jpg)"></div>
@@ -55,34 +55,5 @@ testimonial: true
       </div>
     </div>
   </div>
-</section>
-
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <div class="content">
-          <div class="row">
-            <div class="col-md-6 slide-right">
-              <div class="bg-image aspect-4x3 mt-4" style="background-image: url(/assets/img/contact-1.jpg)"></div>
-            </div>
-            <div class="col-md-6 slide-left">
-              <div class="bg-image aspect-4x3 mt-4" style="background-image: url(/assets/img/contact-2.jpg)"></div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-4 slide-right">
-              <div class="bg-image aspect-1x1 mt-4" style="background-image: url(/assets/img/contact-3.jpg)"></div>
-            </div>
-            <div class="col-md-4 slide-up">
-              <div class="bg-image aspect-1x1 mt-4" style="background-image: url(/assets/img/contact-4.jpg)"></div>
-            </div>
-            <div class="col-md-4 slide-left">
-              <div class="bg-image aspect-1x1 mt-4" style="background-image: url(/assets/img/contact-5.jpg)"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+</section> -->
+{% include team-photo-grid.html %}
