--- a/src/work.html
+++ b/src/work.html
@@ -27,12 +27,12 @@ testimonial:
 </section>
 
 <section class="py-0">
-  <div id="projectList" class="row slide-up-1 no-gutters">
+  <div id="projectList" class="row no-gutters project-grid">
     {% for object in site.data.project_order.projects %}
     {% assign project =  site.projects | where: "slug", object | first %}
     {% if project.status == "active" %}
     <div class="mix position-relative col-lg-6 {% for tag in project.tags %} {{ tag }}{% endfor %}">
-      <a href="{{ project.url }}" class="expand-full-screen" data-transition="ProjectTransition" data-image="{{ project.featured_image }}">
+      <a href="{{ project.url }}" class="project-item">
         <div class="bg-image aspect-16x9" style="background-image: url({{ project.featured_image | default: site.placeholders.aspect-4x3 }})"></div>
         <div class="hover-overlay">
           <div class="overlay-content">
