--- a/src/contact.html
+++ b/src/contact.html
@@ -14,11 +14,15 @@ testimonial: true
             people in the world.</p>
         </div>
       </div>
+      <div class="preloader">
+        loading contact form
+      </div>
       <div class="col-12 col-lg-10 mx-lg-auto">
         <div class="content">
           <div id="contact-page-form" class="cognito">
-            <script src="https://services.cognitoforms.com/s/bbN8iw1MJUqjPe6aHn-_rw"></script>
-            <script>Cognito.load("forms", { id: "25" });</script>
+            <div class="preloader">
+              <small>contact form loading</small>
+            </div>
           </div>
         </div>
       </div>
