--- a/src/_projects/first-launch.html
+++ b/src/_projects/first-launch.html
@@ -37,74 +37,57 @@ tags:
     </div>
   </div>
 </section>
+<img src="/assets/img/projects/first-launch-project/first-1.jpg" class="img-fluid" alt="First banner image">
 <div class="row no-gutters">
   <div class="col-lg-6">
-    <div class="bg-image aspect-16x9" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+    <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/first-launch-project/first-2.jpg)"></div>
   </div>
   <div class="col-lg-6">
-    <div class="bg-image aspect-16x9" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+    <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/first-launch-project/first-3.jpg)"></div>
   </div>
 </div>
-<section>
+<div class="row no-gutters">
+  <div class="col-lg-6">
+    <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/first-launch-project/first-4.jpg)"></div>
+  </div>
+  <div class="col-lg-6">
+    <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/first-launch-project/first-5.jpg)"></div>
+  </div>
+</div>
+<section class="bg-black text-white">
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
         <div class="content">
-          <h2>More Logos!</h2>
+          <h2>Animation</h2>
         </div>
       </div>
       <div class="col-lg-8">
         <div class="content">
-          <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure amet, optio iste animi adipisci
-            omnis obcaecati sed quaerat, quos officia, provident dolor veniam temporibus ratione nesciunt sunt rerum
-            voluptates corrupti.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<div class="row no-gutters">
-  <div class="col-lg-6">
-    <div class="bg-image aspect-1x1" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
-  </div>
-  <div class="col-lg-6">
-    <div class="bg-image aspect-1x1" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
-  </div>
-</div>
-<section class="bg-dark text-white">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-4">
-        <div class="content">
-          <h2>Program Teaser</h2>
-        </div>
-      </div>
-      <div class="col-lg-8">
-        <div class="content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque fuga laboriosam ullam ipsum! Pariatur, architecto! Quisquam repudiandae architecto optio fugiat vitae rerum vero perspiciatis obcaecati. Laboriosam dicta ad asperiores vel.
+          <p class="mb-0">We created a series of animations that teased just enough program details to get kids psyched about the upcoming season.</p>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <iframe src="https://player.vimeo.com/video/307118616" width="100%" height="600" frameborder="0"
-            webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          <iframe src="https://player.vimeo.com/video/307118616" width="100%" height="600" frameborder="0" webkitallowfullscreen
+            mozallowfullscreen allowfullscreen></iframe>
         </div>
       </div>
     </div>
   </div>
 </section>
-<div class="bg-image aspect-hero" style="background-image: url({{ site.placeholders.hero }})"></div>
+<div class="bg-image aspect-hero" style="background-image: url(/assets/img/projects/first-launch-project/first-6.jpg)">
+</div>
 <section class="website-showcase bg-dark text-white">
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
         <div class="content position-sticky sticky-top">
-          <h3>Website copy</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi repudiandae consequuntur rem. Provident
-            doloribus modi in a vero. Fugit itaque laborum quam labore vel ducimus facilis dicta quia perferendis
-            veritatis.</p>
+          <h3>Promotional Website</h3>
+          <p>Launch Microsite was designed to set the tone for the upcoming season…meant to get students, coaches, and potential
+          sponsors stoked for the awesome possibilities on the horizon.</p>
         </div>
       </div>
       <div class="col-lg-8">
