project layouts and assets

--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -50,12 +50,12 @@ tags:
     </div>
   </div>
 </section>
-<section class="website-showcase bg-black text-white">
+<section class="website-showcase bg-navy-dark text-white">
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
         <div class="content position-sticky sticky-top">
-          <h3>Bittercube website</h3>
+          <h3>Website</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi repudiandae consequuntur rem. Provident doloribus modi in a vero. Fugit itaque laborum quam labore vel ducimus facilis dicta quia perferendis veritatis.</p>
         </div>
       </div>
@@ -68,4 +68,4 @@ tags:
   </div>
 </section>
 <div class="bg-image aspect-hero"
-  style="background-image: url(/assets/img/projects/bittercube-project/bittercube-4jpg)"></div>
+  style="background-image: url(/assets/img/projects/bittercube-project/bittercube-4.jpg)"></div>
