--- a/src/_projects/burton-learn-to-ride.html
+++ b/src/_projects/burton-learn-to-ride.html
@@ -7,7 +7,7 @@ summary:
 description_html: '<p>Standing sideways since 1977, Burton IS snowboarding in many ways. Learn to Ride — formerly Experience Snowboarding — is a program initiated by Burton in partnership with various resorts all over the world to provide comprehensive learning experiences for riders of every age and ability. From toddlers to first-timers, retirees to park rats, Learn to Ride is a fun, empowering, and exciting program that allow riders, shops and resorts to take their snowboard experience to the next level.'
 completion_date: 2013-08-01 00:00:00
 featured_image: /assets/img/projects/burtonltr-project/burtonltr-feature.jpg
-hero_image: /assets/img/projects/burtonltr-project/burtonltr-hero.jpg
+hero_image: 
 gallery:
 - image:
 caption:
@@ -17,52 +17,55 @@ tags:
 - web
 ---
 
-
-
+<img src="/assets/img/projects/burtonltr-project/burton-4.jpg" class="img-fluid" alt="Burton Learn to ride Banner image">
 <section>
   <div class="container">
     <div class="row">
       <div class="col-lg-4">
         <div class="content">
-          <h2>An Identity title here</h2>
+          <h2>Identity</h2>
         </div>
       </div>
       <div class="col-lg-8">
         <div class="content">
-          <p class="text-large mb-0">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam dicta quod consequatur
-            tempore hic, obcaecati totam repellendus laudantium eius soluta quidem exercitationem quibusdam? Quis
-            corporis similique in alias placeat at?</p>
+          <p class="text-large mb-0">Learn to Ride isn’t just kids and beginners— every element of the initiative (and the brand) is designed to encourage
+          and enable improvement at all levels of riding. To this end, Ocupop also established the augmented brand of Burton Learn
+          To Ride+ for more advanced programs, products, and places.</p>
         </div>
       </div>
     </div>
   </div>
 </section>
-<div class="bg-image aspect-16x9"
-  style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-06.jpg)"></div>
 <div class="row no-gutters">
   <div class="col-md-6">
-    <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-03.jpg)"></div>
+    <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/burtonltr-project/burton-1.jpg)"></div>
   </div>
   <div class="col-md-6">
-    <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-05.jpg)"></div>
+    <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/burtonltr-project/Burton-image-2.svg)"></div>
   </div>
 </div>
-
-<!-- <section class="pt-0">
+<div class="bg-image aspect-16x9"
+  style="background-image: url(/assets/img/projects/burtonltr-project/burton-3.jpg)"></div>
+<section id="burton-icons" class="bg-blue-med">
   <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <div class="content slide-up-1">
-          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-02.jpg)"></div>
+    <div class="row align-items-center">
+      <div class="col-4">
+        <div class="content">
+          <img src="/assets/img/projects/burtonltr-project/burton-icons-01.svg" alt="Burton Learn to Ride Icon">
         </div>
-        <div class="content slide-up-1">
-          <div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-04.jpg)"></div>
+      </div>
+      <div class="col-4">
+        <div class="content">
+          <img src="/assets/img/projects/burtonltr-project/burton-icons-02.svg" alt="Burton Learn to Ride Icon">
         </div>
-        <div class="content slide-up-1">
-          
+      </div>
+      <div class="col-4">
+        <div class="content">
+          <img src="/assets/img/projects/burtonltr-project/burton-icons-03.svg" alt="Burton Learn to Ride Icon">
         </div>
       </div>
     </div>
-    
   </div>
-</section> -->
+</section>
+<div class="bg-image aspect-16x9" style="background-image: url(/assets/img/projects/burtonltr-project/burton-5.jpg)">
+</div>
