--- a/src/_projects/kunoa.html
+++ b/src/_projects/kunoa.html
@@ -4,16 +4,36 @@ quote: Take your beef to the beach!
 client: Kunoa Cattle Company
 status: active
 summary:
-description_html: 
-completion_date: 2014-08-20 00:00:00
+description_html: '<p>98% of the beef consumed in Hawaii is imported. Kunoa is changing that. Hawaii’s only vertically integrated cattle
+company is ushering in a future where food is locally raised with integrity and care. A future where produce and protein
+is abundant, fresh, and healthy. A future where Hawaii can stand proud and free, flush with local food as rich as the
+islands themselves.</p>'
+completion_date:
 featured_image: /assets/img/projects/kunoa/kunoa-feature.jpg
-hero_image: /assets/img/projects/kunoa/kunoa-01.jpg
+hero_image:
 tags:
   - strategy
   - branding
   - web
 ---
-
+<img src="/assets/img/projects/kunoa/kunoa-01.jpg" class="img-fluid" alt="Kunoa banner image">
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4">
+        <div class="content">
+          <h2>Identity</h2>
+        </div>
+      </div>
+      <div class="col-lg-8">
+        <div class="content">
+          <p class="mb-0">Passionately supporting Kunoa’s dedication to a sustainable future for Hawaii, Ocupop named the brand, designed the
+          identity, and has served as agency of record since day one.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 <div class="row no-gutters">
   <div class="col-lg-6">
     <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/kunoa/kunoa-02.jpg)">
@@ -35,6 +55,31 @@ tags:
   </div>
 </div>
 <img src="/assets/img/projects/kunoa/kunoa-07.jpg" class="img-fluid" alt="kunoa icons">
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4">
+        <div class="content">
+          <h2>Packaging</h2>
+        </div>
+      </div>
+      <div class="col-lg-8">
+        <div class="content">
+          <p class="mb-0">Kunoa in Hawaiian roughly translates as ‘Stand Free,’ celebrating their core mission of bringing healthy, local food to
+          the people of Hawaii and bolster an Ag industry that not only turns profits for today, but positions the Ag industry for
+          a long, sustainable tomorrow. Because, after all, our food is our future!</p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <img src="/assets/img/projects/kunoa/kunoa-09.jpg" alt="Kunoa packaging image">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 <div class="bg-image aspect-hero" style="background-image: url(/assets/img/projects/kunoa/kunoa-06.jpg)"></div>
 <section class="website-showcase bg-black text-white">
   <div class="container">
@@ -51,7 +96,7 @@ tags:
       </div>
       <div class="col-lg-8">
         <div class="content">
-          <img src="/assets/img/projects/kunoa/kunoa-.jpg" class="img-fluid" alt="website image">
+          <img src="/assets/img/projects/kunoa/kunoa-web-home.jpg" class="img-fluid mt-5" alt="website image">
         </div>
       </div>
     </div>
