--- a/src/_projects/first-launch.html
+++ b/src/_projects/first-launch.html
@@ -7,7 +7,7 @@ summary: 'For 2019 Ocupop proposed developing a cohesive theme that would work a
 that hadn’t been done in previous years.'
 description_html: '<p>FIRST is on a mission to get children ages 6-18 involved in STEM and STEM related elds. Every year FIRST holds a tournament comprising of four different competitions. Each competition presents a new challenge that requires teamwork, communication and STEM principles. Oh, and robots, too.</p><p>For 2019 Ocupop proposed developing a cohesive theme that would work across all four competitions—something that hadn’t been done in previous years.</p>'
 completion_date: 2019-01-01 00:00:00
-featured_image: '/assets/img/projects/first-launch-project/first-launch-featured.jpg'
+featured_image: '/assets/img/projects/first-launch-project/FIRST-worktile.png'
 hero_image: '/assets/img/projects/first-launch-project/first-parallax.jpg'
 gallery:
 - image:
